Fix for buttons in request list (spacing)

--- a/src/Ombi/ClientApp/src/app/requests-list/components/requests-list.component.scss
+++ b/src/Ombi/ClientApp/src/app/requests-list/components/requests-list.component.scss
@@ -59,3 +59,7 @@
     	justify-content: center !important;
 	}
 }
+
+::ng-deep table.requests button{
+	margin:5px;
+}
